@@ -22,7 +22,7 @@ Martin Gieseking <@PACKAGE_BUGREPORT@>
 :man source: dvisvgm
 :man version: @VERSION@
 :man manual: dvisvgm Manual
-:revdate: 2022-01-18 10:32 +0100
+:revdate: 2022-02-26 19:08 +0100
 
 Name
 ----
@@ -436,7 +436,12 @@ The following list describes the currently available optimizer modules.
   inheritable properties, such as +fill+ or +stroke-width+, into account and only removes them from
   an element if none of the other attributes, like +id+, prevents this.
 
-  *remove-clippath*;;
+  *reassign-clippaths*;;
+  Collects all +clipPath+ elements that differ only by their IDs. Afterwards, the duplicates are
+  removed so that only one remains. All +clip-path+ attributes referencing one of the duplicates
+  are updated accordingly.
+
+  *remove-clippaths*;;
   Removes all redundant 'clipPath' elements. This optimization was already present in former versions
   of dvisvgm and was always applied by default. This behavior is retained, i.e. dvisvgm executes
   this module even if option *--optimize* is not given. You can use argument 'none' to prevent that.
