@@ -211,6 +211,7 @@
     <ClCompile Include="..\src\ImageToSVG.cpp" />
     <ClCompile Include="..\src\Opacity.cpp" />
     <ClCompile Include="..\src\optimizer\AttributeExtractor.cpp" />
+    <ClCompile Include="..\src\optimizer\ClipPathReassigner.cpp" />
     <ClCompile Include="..\src\optimizer\GroupCollapser.cpp" />
     <ClCompile Include="..\src\optimizer\RedundantElementRemover.cpp" />
     <ClCompile Include="..\src\optimizer\SVGOptimizer.cpp" />
@@ -333,6 +334,7 @@
     <ClInclude Include="..\src\MD5HashFunction.hpp" />
     <ClInclude Include="..\src\Opacity.hpp" />
     <ClInclude Include="..\src\optimizer\AttributeExtractor.hpp" />
+    <ClInclude Include="..\src\optimizer\ClipPathReassigner.hpp" />
     <ClInclude Include="..\src\optimizer\DependencyGraph.hpp" />
     <ClInclude Include="..\src\optimizer\GroupCollapser.hpp" />
     <ClInclude Include="..\src\optimizer\OptimizerModule.hpp" />
